@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.11649 2005/10/24 22:40:03 chris Exp $
+$NetBSD: CHANGES,v 1.11650 2005/10/24 23:55:20 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -4827,3 +4827,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated multimedia/gmplayer to 1.0rc7nb2 [minskim 2005-10-24]
 	Updated editors/ng to 1.4.3nb1 [rillig 2005-10-24]
 	Updated mail/sylpheed-devel to 2.1.4 [chris 2005-10-24]
+	Updated pkgtools/pkglint to 4.30 [rillig 2005-10-24]
